--- a/css/style.css
+++ b/css/style.css
@@ -324,11 +324,12 @@ a, .btn {
 .progress.progressStyle {
 	height: 8px;
 	padding: 1px;
-	background-color: var(--secondaryColor);
+  border: 1px solid var(--baseColor);
+	background-color: #fff;
 	border-radius: 3px;
 }
 .progressStyle .progress-bar {
-	background-color: #fff;
+	background-color: var(--secondaryColor);
 	border-radius: 3px;
 }
 .progressCol + .progressCol {
