--- a/css/style.css
+++ b/css/style.css
@@ -405,8 +405,11 @@ a, .btn {
 }
 .portfolioImgCol img {
   border-radius: 6px;
+  width: 346px;
+  height: 284px;
+/*  
   width: 246px;
-  height: 184px;
+  height: 184px;*/
   -o-object-fit: cover;
   object-fit: cover;
 }
